lwas_cli/build_errors_utf8.txt
cargo :     Checking lwas_core v1.0.0-SINGULARITY 
(C:\RUST-LANGUAGE\QANTUM-JULES\lwas_core)
At line:1 char:1
+ cargo check 2> build_errors.txt; Get-Content build_errors.txt | Set-C ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking lw...ULES\lwas_c 
   ore):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0412]: cannot find type `SovereignResult` in this scope
  --> lwas_core\src\organism.rs:43:47
   |
43 |     pub async fn perform_self_audit(&self) -> SovereignResult<usize> {
   |                                               ^^^^^^^^^^^^^^^
   |
  ::: lwas_core\src\omega\audit.rs:21:1
   |
21 | pub struct SovereignAudit {
   | ------------------------- similarly named struct `SovereignAudit` 
defined here
   |
help: a struct with a similar name exists
   |
43 -     pub async fn perform_self_audit(&self) -> SovereignResult<usize> {
43 +     pub async fn perform_self_audit(&self) -> SovereignAudit<usize> {
   |
help: consider importing this type alias through its public re-export
   |
 5 + use crate::SovereignResult;
   |

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\omega\aleph_broadcaster.rs:2:5
  |
2 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by 
default

warning: unused import: `crate::omega::scribe::SovereignScribe`
 --> lwas_core\src\omega\alignment_validator.rs:6:5
  |
6 | use crate::omega::scribe::SovereignScribe;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::SovereignResult`
 --> lwas_core\src\omega\apotheosis.rs:6:5
  |
6 | use crate::prelude::SovereignResult; // Explicit truth
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::net::TcpStream`
 --> lwas_core\src\omega\global_rewrite.rs:5:5
  |
5 | use tokio::net::TcpStream;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\omega\lockdown.rs:5:5
  |
5 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\omega\noetic_engine.rs:5:5
  |
5 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `Tensor`
 --> lwas_core\src\omega\noetic_engine.rs:6:27
  |
6 | use candle_core::{Device, Tensor};
  |                           ^^^^^^

warning: unused import: `candle_transformers::models::llama as model`
 --> lwas_core\src\omega\noetic_engine.rs:7:5
  |
7 | use candle_transformers::models::llama as model;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\omega\rl.rs:2:5
  |
2 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\omega\sovereign_command.rs:1:5
  |
1 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `crate::prelude::*`
 --> lwas_core\src\security\ledger.rs:1:5
  |
1 | use crate::prelude::*;
  |     ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0412`.
warning: `lwas_core` (lib) generated 11 warnings
error: could not compile `lwas_core` (lib) due to 1 previous error; 11 
warnings emitted
